JMS Fix (#12)
* feat: add bookingEvent to jms topic

* feat: add sending emails

* fix: security